Fixed spacing and grammatical issues on both pages.

--- a/style.css
+++ b/style.css
@@ -2,4 +2,4 @@ body { background: pink; font-family: "Comic Sans MS";}
 h1 { text-align:center; font-weight:bold; font-style:italic; }
 h2 { text-align:center; font-weight:bold; font-style:italic; }
 h5 { text-align:center; font-weight:bold; font-style:italic; }
-h6 { text-align:center; font-weight:bold; font-style:italic; }
+h6 { text-align:left; font-weight:bold; font-style:italic; }
